# myChatbot

./: .gitignore  README.md  myChatBot.ipynb  pyproject.toml
chromadb/: chroma.sqlite3
chromadb/465b2a22-a5d8-4b1d-bb70-7d754de8fe77/: index_metadata.pickle
src/mychatbot/: __init__.py  chatbot.py  chatbot_retrain.py  chatbot_test1.ipynb  ctbt.py  first.py  pdf_processor.py
src/mychatbot/chromadb/: chroma.sqlite3
