[project]
name = "mychatbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joao-reis25", email = "joao.miguel.reis@outlook.com" }
]
dependencies = [
    "transformers>=4.47.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mychatbot"]
