[project]
name = "mychatbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joao-reis25", email = "joao.miguel.reis@outlook.com" }
]
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "requests>=2.32.3",
    "chromadb>=0.5.23",
    "ollama>=0.4.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mychatbot"]
