[project]
name = "mychatbot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joao-reis25", email = "joao.miguel.reis@outlook.com" }
]
dependencies = [
    "requests>=2.32.3",
    "chromadb>=0.5.23",
    "ollama>=0.4.4",
    "sentence-transformers>=3.3.1",
    "streamlit>=1.41.0",
    "pypdf2>=3.0.1",
    "langchain>=0.3.11",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.11",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mychatbot"]
